# Algorithms_And_Data_Structures_GUI

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
algorithms/: searchings.hpp  sortings.hpp
data_structures/: binary_tree.cpp  binary_tree.h  binary_tree.hpp  linked_list.cpp  linked_list.h  linked_list.hpp  queue.hpp  stack.cpp  stack.h  stack.hpp
